src/ci_provider/buildkite/snapshots/codspeed_runner__ci_provider__buildkite__provider__tests__pull_request_upload_metadata.snap
---
source: src/ci_provider/buildkite/provider.rs
expression: upload_metadata
---
{
  "version": 1,
  "tokenless": false,
  "ref": "refs/pull/22/merge",
  "headRef": "feat/codspeed-runner",
  "baseRef": "main",
  "owner": "my-org",
  "repository": "adrien-python-test",
  "commitHash": "abc123",
  "event": "pull_request",
  "profileMd5": "abc123",
  "ghData": null,
  "runner": {
    "name": "codspeed-runner",
    "version": "[version]"
  },
  "platform": "buildkite"
}
